<resources>
    <string name="app_name">Joetz</string>
    <string name="signIn">Log in</string>
    <string name="submit">Bevestigen</string>
    <string name="cancel">Annuleren</string>
    <string name="orText">of</string>
    <string name="createAccount">Registreer</string>
    <string name="emailHint">E-mail</string>
    <string name="emailHintMetSter">E-mail *</string>
    <string name="passwordHint">Wachtwoord *</string>
    <string name="confirmPasswordHint">Bevestig wachtwoord *</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="title_activity_create_account">Registreer</string>
    <string name="menu_settings">opties</string>
    <string name="title_activity_main">Activiteiten</string>
    <string name="emailingeven">Geef uw e-mail in</string>
    <string name="back">Terug</string>
    <string name="button_logout">Uitloggen</string>
    <string name="confirmationSignup">Account aangemaakt.</string>
    <string name="title_activity_main_screen">Home</string>
    <string name="title_activity_Login">Inloggen</string>
    <string name="title_activity_Register">Registreren</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inschrijven">Inschrijven vakantie</string>
    <string name="title_activity_activiteit_detail">activiteit_detail</string>
    <string name="title_activity_activiteit_overzicht">activiteit_overzicht</string>
    <string name="title_activity_profiel_detail">profiel_detail</string>
    <string name="title_activity_profiel_edit">profiel_edit</string>
    <string name="updatingReport">U bent ingelogd</string>
    <string name="confirm_registry">E-mail is niet gevonden. Wilt u een nieuwe gebruiker aanmaken?</string>
    <string name="nee">Nee</string>
    <string name="ja">Ja</string>
    <string name="menu_forgot_password">Wachtwoord vergeten</string>
    <string name="volgende">Volgende</string>
    <string name="aansluitingsnummer">Voer je aansluitingsnummer in.</string>
    <string name="codeGerechtige">Voer uw codeGerechtigde in *</string>
    <string name="login_loading">U wordt ingelogd, even geduld aub.</string>
    <string name="bondMoyson">Bent u lid van Bond Moyson?</string>
    <string name="aanlsuitingsnummerhint">Geef uw aansluitingsnummer in *</string>
    <string name="filterhint">typ hier om te filteren</string>
    <string name="rijksregnrMetSter">Rijksregisternummer *</string>
    <string name="naamHintMetSter">Voornaam *</string>
    <string name="naamHint">Voornaam</string>
    <string name="famnaamHintMetSter">Naam *</string>
    <string name="famnaamHint">Naam</string>
    <string name="straatHintMetSter">Straat *</string>
    <string name="huisnrHintMetSter">Huisnummer *</string>
    <string name="BusHint">Bus</string>
    <string name="gemeenteHint">Gemeente *</string>
    <string name="postcodeHint">Postcode *</string>
    <string name="telefoonHint">Telefoon</string>
    <string name="gsmHint">Gsmnummer</string>
    <string name="gsmHintMetSter">Gsmnummer *</string>
    <string name="EmailHint">E-mailadres</string>
    <string name="EmailHintMetSter">E-mailadres *</string>
    <string name="error_incorrect_postcode">Postcode is niet geldig (moet numeriek zijn, 4 cijfers, max 9992)</string>
    <string name="error_incorrect_rijksregnr">Rijksregisternummer is niet geldig (11 cijfers, geen spaties of speciale tekens)</string>
    <string name="error_incorrect_rijksregisternummer">Ongeldig rijksregisternummer</string>
    <string name="error_occupied_rijksregnr">Dit rijksregisternummer is reeds in gebruik.</string>
    <string name="error_occupied_gsm">Dit gsm-nummer is reeds in gebruik.</string>
    <string name="error_occupied_email">Dit e-mail adres is reeds in gebruik.</string>
    <string name="error_incorrect_huisnr">Huisnummer is niet geldig (moet numeriek zijn)</string>
    <string name="signup_melding_monitor">U schrijft zich momenteel in als ouder/voogd. Wilt u zich inschrijven als monitor?
Mail Joetz met uw voornaam, naam, e-mailadres, rijksregisternummer, adresgegevens, gsm en eventueel uw telefoonnummer.
        Ons e-mailadres is joetz.west@joetz.be en u kan ook terecht op het nummer: 056 27 47 00</string>
    <string name="loading_message">Bezig met laden, even geduld aub</string>
    <string name="error_no_internet">Kan geen verbinding maken met de server. Gelieve uw verbinding te controleren.</string>
    <string name="error_incorrect_gsm">Ongeldig gsm-nummer (precies 10 cijfers, geen spaties of speciale tekens)</string>
    <string name="error_incorrect_tel">Ongeldig telefoon nummer (precies 9 cijfers, geen spaties of speciale tekens)</string>
    <string name="error_field_required">Verplicht in te vullen</string>
    <string name="error_invalid_email">Ongeldig e-mailadres</string>
    <string name="error_incorrect_aansluitingsnr">Ongeldig aansluitingsnummer (precies 10 cijfers, geen spaties of speciale tekens)</string>
    <string name="error_incorrect_lidnr">Ongeldig lidnummer</string>
    <string name="error_incorrectLogin">E-mail of wachtwoord is ongeldig</string>
    <string name="error_generalException">Er is iets fout gelopen. Onze excuses voor het ongemak.</string>
    <string name="passwordForgottenEmailSent">Er werd een mail gestuurd om uw wachtwoord opnieuw in te stellen.</string>
    <string name="passwordForgottenEmailFailed">Ons systeem kon geen mail sturen. Onze excuses voor het ongemak.</string>
    <string name="error_noNumbers">Dit veld mag geen cijfers bevatten</string>
    <string name="error_duplicate_email">Dit e-mailadres is al in gebruik</string>
    <string name="error_incorrect_password">Fout wachtwoord</string>
    <string name="error_invalid_password">wachtwoord is te kort</string>
    <string name="error_invalid_confirm_password">wachtwoorden komen niet overeen</string>
    <string name="dialog_ingeschreven_melding">U heeft zich succesvol ingeschreven.</string>
    <string name="dialog_Lidnr_Toegevoegd">Lidnummer toegevoegd</string>
    <string name="dialog_voorkeur_complete">Uw voorkeur werd succesvol doorgegeven.</string>
    <string name="dialog_voorkeur_occupied">U heeft al een voorkeur ingediend voor deze vakantie.</string>
    <string name="btnCPtoevoegen">Extra contactpersoon toevoegen</string>
    <string name="btnCPVerwijderen">Extra contactpersoon verwijderen</string>
    <string name="extra_Informatie">Extra Informatie</string>
    <string name="mainTitlePart1">Vakanties</string>
    <string name="mainTitlePart2">JOETZ Funfactor</string>
    <string name="mainTitlePart3">Monitoren</string>
    <string name="mainTitlePart4">Vormingen</string>
    <string name="mainTitlePart5">Favoriete vakanties</string>
    <string-array name="items">
        <item>Vakanties</item>
        <item>Joetz Funfactor</item>
        <item>Profielen</item>
        <item>Vormingen</item>
        <item>Indienen voorkeur</item>
        <item>Registreren</item>
        <item>Inloggen</item>
        <item>Over Joetz</item>
    </string-array>
    <string-array name="itemsIngelogged">
        <item>Vakanties</item>
        <item>Joetz funfactor</item>
        <item>Profielen</item>
        <item>Vormingen</item>
        <item>Indienen voorkeur</item>
        <item>Favoriete vakanties</item>
        <item>Uitloggen</item>
        <item>Over Joetz</item>
    </string-array>
    <string name="title_About">Over JOETZ</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_tester_list_item">TesterListItem</string>
    <string name="meerInfo">Meer info</string>
    <string name="minderInfo">Minder info</string>
    <string name="mainTitle_Funfactor">JOETZ funfactor</string>
    <string name="vakantieDetailTitel">Vakantie</string>
    <string name="label_geboorteDatum">Geboortedatum</string>
    <string name="inschrijvenVak1_AlgemeneUitleg">Gelieve de gegevens van de deelnemer in te voeren.</string>
    <string name="inschrijvenVak2_AlgemeneUitleg">Gelieve de gegevens in te vullen van een contactpersoon in geval van nood. U kan ervoor kiezen om een tweede contactpersoon toe te voegen</string>
    <string name="inschrijvenVak3_AlgemeneUitleg">Indien er nog extra info is, waar de leiding van op de hoogte moet zijn, kan u dit hier invullen. Bijvoorbeeld allergieën, ziekte, &#8230;</string>
    <string name="ok">OK</string>
    <string name="logoutText">Bent u zeker dat u zich wilt uitloggen?</string>
    <string name="uitlegBijUitloggen">Als u de app afsluit, zal u automatisch uitgelogd worden. Dit is om te voorkomen dat andere personen uw account gebruiken.</string>
    <string name="Uitloggen">Uitloggen</string>
    <string name="meldingUitgelogd">U bent uitgelogd</string>
    <string name="inschrijven">Inschrijven</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="doelgroep">Doelgroep</string>
    <string name="locatie">Locatie</string>
    <string name="tips">Tips</string>
    <string name="criteriaDeelnemer">Criteria deelnemer</string>
    <string name="vertrekdatum">Vertrekdatum</string>
    <string name="terugkeerdatum">Terugkeerdatum</string>
    <string name="periode">Periode</string>
    <string name="periodes">Periodes</string>
    <string name="betalingsw">Betalingswijze</string>
    <string name="vervoer">Vervoer</string>
    <string name="formule">Formule</string>
    <string name="maxDeelnemers">Maximum aantal deelnemers</string>
    <string name="inbegrepenInPrijs">Inbegrepen in de prijs</string>
    <string name="basisprijs">Prijs</string>
    <string name="website">Website</string>
    <string name="ledenprijs">De Bond Moyson ledenprijs</string>
    <string name="sterPrijsOuder1">De sterprijs voor 1 ouder</string>
    <string name="sterPrijs2Ouders">De sterprijs voor 2 ouders</string>
    <string name="forgetPass">Wachtwoord vergeten</string>
    <string name="error_occupied_inschrVak">U heeft zich al ingeschreven voor deze vakantie.</string>
    <string name="joetzAbout">Verlang je ook al naar de vakantie? Dan presenteren we je graag de <b>kinder- en jongerenvakanties 2014</b> van JOETZ.
Dankzij onze selectie van de <b>uiterst verzorgde verblijfplaatsen en de begeleiding door ervaren monitoren</b> die allemaal een opleiding hebben genoten die erkend wordt door de Vlaamse overheid, kan JOETZ opnieuw duizenden kinderen en jongeren de vakantie van hun leven bieden.
Een kindervakantie is in de eerste plaats <b>natuurlijk ambiance, vriendschap en plezier.</b> Daarom gaat er bij JOETZ heel veel aandacht naar <b>spel, animatie, sport en daguitstappen.</b> Samen met <b>gezonde maaltijden en hygiëne</b> zijn dat voor ons essentiële ingrediënten om onbezorgde, kwaliteitsvolle vakanties te garanderen.
JOETZ heeft ook voor <b>jongeren</b> heel wat in de aanbieding. Je kunt kiezen uit een hele reeks buitenlandse vakanties. En of je nu fun of actie zoekt, JOETZ heeft het allemaal. <b>Vanaf 18</b> kan iedereen die door de reismicrobe gebeten is, met JOETZ mee op <b>inleefreis</b> om zo een land te ontdekken als gast in plaats van als toerist.
De smaak te pakken? Wacht dan niet te lang en boek een onvergetelijke JOETZ-vakantie!</string>
    <string name="title_activity_inschrijving_signup">InschrijvingSignup</string>
    <string name="maintitle_Inschrijven_Vorming">Inschrijven vorming</string>
    <string name="infolabel_vormingInschrijven">Gelieve een datum te selecteren waarop u de vorming wilt bijwonen.</string>
    <string name="title_activity_vorming_signup">VormingSignup</string>
    <string name="lidnummerBeheerder">Geef het lidnummer in</string>
    <string name="voegLidnrToe">Voeg lidnummer toe</string>
    <string name="emailToegvoegenLidnr">Geef het e-mail van de monitor in</string>
    <string name="rijksregnrToevoegenLidnr">Geef het rijksregisternummer in</string>
</resources>