<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:finishOnTaskLaunch="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginFormContainer">

    <EditText
        android:id="@+id/VoornaamSignup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/naamHint"/>

    <EditText
        android:id="@+id/NaamSignup"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/VoornaamSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/famnaamHint" />

    <EditText
        android:id="@+id/StraatSignup"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/NaamSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/straatHint" />

    <EditText
        android:id="@+id/HuisnrSignup"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/StraatSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/huisnrHint" />

    <EditText
        android:id="@+id/BusSignup"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/HuisnrSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/BusHint" />

    <EditText
        android:id="@+id/GemeenteSignup"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BusSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/gemeenteHint" />

    <EditText
        android:id="@+id/PostcodeSignup"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/GemeenteSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/postcodeHint" />

    <EditText
        android:id="@+id/TelefoonSignup"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PostcodeSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/telefoonHint" />

    <EditText
        android:id="@+id/GsmSignup"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TelefoonSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/gsmHint" />



    <Button
        android:id="@+id/btnNaarDeel4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/GsmSignup"
        android:layout_marginTop="25dp"
        android:text="@string/volgende" />

    <Button
        android:id="@+id/btnNaarDeel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_below="@id/btnNaarDeel4"
        android:text="@string/back" />

</RelativeLayout>
    </ScrollView>