<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/LoginFormContainer"
        android:finishOnTaskLaunch="true">

        <TextView
            android:id="@+id/AlgemeneUitleg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/inschrijvenVak2_AlgemeneUitleg"/>

        <EditText
            android:id="@+id/VoornaamContactPersoonIns"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_below="@id/AlgemeneUitleg"
            android:hint="@string/naamHint"/>

        <EditText
            android:id="@+id/NaamContactPersoon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/VoornaamContactPersoonIns"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:hint="@string/famnaamHint" />

        <EditText
            android:id="@+id/TelefoonContactPersoon"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/NaamContactPersoon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:hint="@string/telefoonHint" />

        <EditText
            android:id="@+id/GsmContactPersoon"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TelefoonContactPersoon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:hint="@string/gsmHint" />


        <Button
            android:id="@+id/btnNaarDeel3V"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/GsmContactPersoon"
            android:layout_marginTop="25dp"
            android:text="@string/volgende" />


    </RelativeLayout>
</ScrollView>