<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:finishOnTaskLaunch="true">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/emailingeven"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_forgetpassword"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_submitforgetpassword"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_forgetpassword"
        android:layout_marginTop="10dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_submitforgetpassword"

        android:text="@string/back"
        android:layout_marginTop="8dp" />


</RelativeLayout>
