<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginFormContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:finishOnTaskLaunch="true">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lidnrToevoegen"
        android:hint="@string/lidnummerBeheerder"
        />

    <EditText
        android:id="@+id/etEmailLidnummerToevoegen"
        android:layout_below="@id/lidnrToevoegen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/emailToegvoegenLidnr"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/rijksRegNrLidnummerToevoegen"
        android:layout_below="@id/etEmailLidnummerToevoegen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/rijksregnrToevoegenLidnr"
        android:inputType="textEmailAddress" />


    <Button
        android:background="@drawable/button_shape"
        android:id="@+id/btnVoegLidnrToe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rijksRegNrLidnummerToevoegen"
        android:textColor="@color/Rood"
        android:layout_marginTop="10dp"
        android:text="@string/voegLidnrToe" />



</RelativeLayout>