<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hogent.ti3g05.ti3_g05_joetzapp.ProfielEdit"
android:layout_height="match_parent"
android:layout_width="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginFormContainer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/naamHint"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:id="@+id/labelVoorFamilienaam" />

    <EditText
        android:id="@+id/Familienaam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/labelVoorFamilienaam"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/famnaamHint"
    android:layout_marginTop="25dp"
    android:layout_marginStart="10dp"
    android:layout_below="@+id/Familienaam"
    android:id="@+id/labelVoorVoorNaam" />

    <EditText
        android:id="@+id/VoorNaam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelVoorVoorNaam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EmailHint"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/VoorNaam"
        android:id="@+id/labelVoorEmail" />


    <EditText
        android:id="@+id/Email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelVoorEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gsmHint"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/Email"
        android:id="@+id/labelVoorGSM" />


    <EditText
        android:id="@+id/GSM"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelVoorGSM"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/facebookHint"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/GSM"
        android:id="@+id/labelVoorFacebook" />


    <EditText
        android:id="@+id/Facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelVoorFacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />



    <Button
        android:id="@+id/btnBevestigen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Facebook"
        android:layout_marginTop="25dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/btnBevestigen"
        android:text="@string/cancel" />



</RelativeLayout>
</ScrollView>